# yalm-python

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.md  config.py  match_all_ids.py  pyproject.toml  requirements.txt  setup.py  update_resources.sh
.github/workflows/: test.yml
compare_template_text/: AGPLtemplate.txt  compare_normalized_files.py  compare_template_text.py  deprecatelicense1+.txt  deprecatelicense1+template.txt  normalize_template_text.py  sample.txt  sampletemplate.txt  sleepycattemplate.txt  temp.txt  text.txt
compare_template_text/input_template_files/: AAL_temp.txt
configuration/: __init__.py  config.py
examples/: compare_all_ids.py  compare_license_template_text.py  compare_license_texts.py
generate_differences/: differences.py
match_against_all_templates/: match_all_ids.py
match_all_license_ids/: match_all_ids.py
normalize_license_text/: Adobe-2006.txt  Adobe2.txt  CERN-OHL.txt  CERN2.txt  NormalizeClass.py  __init__.py  compare_normalized_files.py  comparefiles.sh  config.py  normalize.py  normalize_class.py  normalizer.py  output2.py
normalize_license_text/input_text_files/: Adobe2.txt
resources/: temp.txt  text.txt
test/: test_compare2license_texts.py  test_compare_license_template_script.py  test_compare_license_texts.py  test_compare_template_text.py  test_match_ids.py  test_normalize.py
test/data/: OBSD2.txt  OBSD3.txt  test_all_ids.txt
test/data/Data_LicenseText/: Adobe-2006_2.txt  CERN-OHL_2.txt  normalized_output2.py  sleepycat_2.txt
tests/: test_classfier.py  test_compare_license_template_script.py  test_compare_license_texts.py  test_compare_template_text.py  test_match_ids.py  test_normalize.py
yalm/: __init__.py  _resources.py  _worker.py  differences.py  licenses.py  normalizer.py  words.py
yalm/template/: normalizer.py  parser.py  template.py
