[tool.poetry]
name = "yalm"
version = "0.1.0"
description = "SPDX YALM is a license matching library based on the SPDX License Matching Guideline."
authors = ["mikit <me@mikit.dev>"]
license = "Apache Software License 2.0"
repository = "https://github.com/m1kit/yalm-python"
homepage = "https://github.com/m1kit/yalm-python"
keywords = []
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
