[tool.poetry]
name = "yalm"
version = "0.0.2.a7"
description = "SPDX YALM is a license matching library based on the SPDX License Matching Guideline."
readme = "README.md"
authors = [
  "mikit <me@mikit.dev>",
  "Anshul Dutt Sharma <anshuldutt21@gmail.com>",
]
license = "Apache-2.0"
repository = "https://github.com/m1kit/yalm-python"
homepage = "https://github.com/m1kit/yalm-python"
keywords = [
  "spdx",
  "license",
  "detection",
  "classfier",
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 3 - Alpha",
]

[tool.poetry.dependencies]
python = "^3.9"
terregex = "~=0.0.5"
regex = "^2021.8.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
